appId: ${APP_ID}
tags:
  - contacts
name: contacts_list_opens
---
- runFlow: ../../setup/sign_in.yaml
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- tapOn:
    text: "Contacts"
    optional: true
- extendedWaitUntil:
    visible: "Contacts"
    timeout: 10000
- takeScreenshot: contacts_list
- back
