appId: ${APP_ID}
tags:
  - drawer
  - manual
name: drawer_plan_button
---
- runFlow: ../../setup/sign_in.yaml
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: "Plan"
    direction: DOWN
    timeout: 5000
    optional: true
- tapOn:
    text: "Plan"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: plan_screen
- back
