appId: ${APP_ID}
tags:
  - mail
name: mailing_lists_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- assertVisible: "Inbox"
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- tapOn:
    text: "Mailing lists"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: mailing_lists_open
- back
- waitForAnimationToEnd
