appId: ${APP_ID}
tags:
  - mail
name: spam_folder_opens
---
- runFlow: ../../setup/sign_in.yaml
- assertVisible: "Inbox"
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- tapOn:
    text: "Spam"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: spam_folder
- swipe:
    start: 5%,50%
    end: 80%,50%
- tapOn: "Inbox"
