appId: ${APP_ID}
tags:
  - mail
  - manual
name: spam_folder_opens
---
- runFlow: ../../setup/sign_in.yaml
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- tapOn:
    text: "Spam"
    optional: true
- extendedWaitUntil:
    visible: "Spam"
    timeout: 10000
- takeScreenshot: spam_folder
