appId: ${APP_ID}
tags:
  - mail
  - manual
name: thread_more_options_menu_visible
---
- runFlow: ../../setup/sign_in.yaml
- assertVisible: "Inbox"
- tapOn:
    point: "50%,30%"
- waitForAnimationToEnd
- tapOn:
    id: "more"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: thread_more_menu
- back
- back
