appId: ${APP_ID}
tags:
  - mail
  - manual
name: filtered_inbox_by_user_folder
---
- runFlow: ../../setup/sign_in.yaml
- swipe:
    start: 5%,50%
    end: 80%,50%
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: "Folders"
    direction: DOWN
    timeout: 5000
- tapOn:
    point: "50%,80%"
- waitForAnimationToEnd
- takeScreenshot: filtered_inbox_folder
- back
