appId: ${APP_ID}
tags:
  - search
  - manual
name: search_in_folder_operator
---
- runFlow: ../../setup/sign_in.yaml
- tapOn:
    id: "search"
    optional: true
- waitForAnimationToEnd
- tapOn:
    text: "in:"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: search_in_operator
- back
