appId: ${APP_ID}
tags:
  - settings
name: change_password_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- runFlow: ../../setup/open_settings.yaml
- tapOn:
    text: "Security"
    optional: true
- waitForAnimationToEnd
- tapOn:
    text: "Change password"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: change_password_screen
- back
- back
