appId: ${APP_ID}
tags:
  - settings
name: two_factor_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- runFlow: ../../setup/open_settings.yaml
- tapOn:
    text: "Security"
    optional: true
- waitForAnimationToEnd
- tapOn:
    text: "Two-factor"
    optional: true
- runFlow:
    when:
      notVisible: "Authenticator"
    commands:
      - tapOn:
          text: "Two factor"
          optional: true
- waitForAnimationToEnd
- takeScreenshot: two_factor_screen
- back
- back
