appId: ${APP_ID}
tags:
  - settings
name: vacation_responder_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- runFlow: ../../setup/open_settings.yaml
- tapOn:
    text: "Vacation"
    optional: true
- runFlow:
    when:
      notVisible: "Vacation"
    commands:
      - tapOn:
          text: "Auto-reply"
          optional: true
- waitForAnimationToEnd
- takeScreenshot: vacation_screen
- back
