appId: ${APP_ID}
tags:
  - settings
name: contact_keys_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- runFlow: ../../setup/open_settings.yaml
- tapOn:
    text: "Encryption"
    optional: true
- waitForAnimationToEnd
- tapOn:
    text: "Contact keys"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: contact_keys_screen
- back
- back
