appId: ${APP_ID}
tags:
  - subscriptions
name: billing_screen_opens
---
- runFlow: ../../setup/sign_in.yaml
- runFlow: ../../setup/open_settings.yaml
- tapOn:
    text: "Subscriptions"
    optional: true
- waitForAnimationToEnd
- tapOn:
    text: "Billing"
    optional: true
- waitForAnimationToEnd
- takeScreenshot: billing_screen
- back
- back
